--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "swagger-ui-express": "^4.1.4",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "@nestjs/cli": "^7.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
