--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start": "node dist/main",
+    "lint": "eslint --ext .ts, ./ --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -20,6 +21,7 @@
     "start:a": "ts-node src/main.ts"
   },
   "dependencies": {
+    "@nestjs/cli": "^7.0.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
@@ -40,12 +42,16 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "date-fns": "^2.15.0",
+    "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "helmet": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
+    "mongodb": "^3.6.0",
     "mongoose": "^5.9.27",
     "mongoose-autopopulate": "^0.12.2",
     "mongoose-lean-virtuals": "^0.6.8",
+    "ms": "^2.1.2",
     "multer": "^1.4.2",
     "nestjsx-automapper": "^3.0.21",
     "passport": "^0.4.1",
@@ -54,8 +60,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "swagger-ui-express": "^4.1.4",
-    "uuid": "^8.3.0",
-    "@nestjs/cli": "^7.0.0"
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
@@ -67,11 +72,12 @@
     "@types/multer": "^1.4.4",
     "@types/node": "^13.9.1",
     "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "3.0.2",
-    "@typescript-eslint/parser": "3.0.2",
-    "eslint": "7.1.0",
+    "@typescript-eslint/eslint-plugin": "^3.10.0",
+    "@typescript-eslint/parser": "^3.10.0",
+    "eslint": "^7.7.0",
+    "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-import": "^2.22.0",
     "jest": "26.0.1",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
