--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.5.12",
+    "@sendgrid/mail": "^7.2.4",
     "@typegoose/typegoose": "^7.3.1",
     "@types/helmet": "0.0.47",
     "@types/mongoose": "^5.7.34",
+    "@types/mongoose-autopopulate": "^0.10.1",
+    "@types/mongoose-lean-virtuals": "^0.5.1",
     "@types/passport": "^1.0.4",
     "@types/uuid": "^8.0.0",
     "aws-sdk": "^2.729.0",
@@ -66,6 +69,7 @@
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
     "@types/ms": "^0.7.31",
