--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "start:a": "ts-node src/main.ts"
   },
   "dependencies": {
+    "@nestjs/bull": "^0.1.2",
     "@nestjs/cli": "^7.0.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.5.0",
@@ -32,6 +33,7 @@
     "@nestjs/swagger": "^4.5.12",
     "@sendgrid/mail": "^7.2.4",
     "@typegoose/typegoose": "^7.3.1",
+    "@types/bull": "^3.14.2",
     "@types/helmet": "0.0.47",
     "@types/mongoose": "^5.7.34",
     "@types/mongoose-autopopulate": "^0.10.1",
@@ -41,6 +43,8 @@
     "aws-sdk": "^2.729.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "bull": "^3.18.0",
+    "bull-arena": "^3.2.2",
     "cloudinary": "^1.22.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
@@ -70,6 +74,8 @@
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/compression": "^1.7.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
     "@types/ms": "^0.7.31",
