--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "cloudinary": "^1.22.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
+    "crypto-js": "^4.0.0",
     "date-fns": "^2.16.1",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
@@ -76,6 +77,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/crypto-js": "^3.1.47",
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
     "@types/ms": "^0.7.31",
